[package]
name = "cursive_tree_view"
edition = "2018"
version = "0.7.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>", "Alexandre Bury <alexandre.bury@gmail.com>"]
description = "A tree view implementation for cursive."
repository = "https://github.com/BonsaiDen/cursive_tree_view.git"
readme = "README.md"
keywords = ["cursive", "ncurses", "TUI", "UI", "tree"]
categories = ["command-line-interface", "gui"]
license = "MIT/Apache-2.0"

[dependencies]
debug_stub_derive = "0.3.0"
#cursive_core = "0.2"
cursive_core = { git = "https://github.com/gyscos/cursive", rev = "3ebecd2d7656b2734ba64f65d2ed7db9bf607865"}


[dev-dependencies]
#cursive = "0.16"
cursive = { git = "https://github.com/gyscos/cursive", rev = "3ebecd2d7656b2734ba64f65d2ed7db9bf607865"}
